--- a/relinksys/web/src/app/admin/add-type/add-type.component.html
+++ b/relinksys/web/src/app/admin/add-type/add-type.component.html
@@ -51,9 +51,10 @@
                                         aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>add</mat-icon>
                                     </button>
-                               
-                                    <button class="ms-2" [disabled]="data1.Category === null" mat-mini-fab color="warn" *ngIf="showAdd === false"
-                                        (click)="delSupport()" aria-label="Example icon button with a bookmark icon">
+
+                                    <button class="ms-2" [disabled]="data1.Category === null" mat-mini-fab color="warn"
+                                        *ngIf="showAdd === false" (click)="delSupport()"
+                                        aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>delete</mat-icon>
                                     </button>
                                 </div>
@@ -65,7 +66,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div *ngIf="showAdd" class="col-xl-1 col-lg-1 col-md-1 col-4 mb-0">
-                                    <button  mat-mini-fab color="primary" (click)="showAdd = !showAdd; saveDepartment()"
+                                    <button mat-mini-fab color="primary" (click)="showAdd = !showAdd; saveDepartment()"
                                         aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>save</mat-icon>
                                     </button>
@@ -75,6 +76,24 @@
                     </div>
                 </div>
             </div>
+            <div class="card">
+                    <div class="header">
+                        <h2>Manual Cron</h2>
+                        <ul class="header-dropdown m-r--5"> </ul>
+                    </div>
+                    <div class="body">
+                        <form #f="ngForm" autocomplete="off">
+                            <div class="row">
+                                 <div class="col-xl-12 col-lg-12 col-md-12 col-4 mb-0">
+                             <button class="ms-3 " type="button" mat-raised-button color="primary"   (click)="ManualCron()"  >Manual Cron</button>
+                                    
+                                 </div>
+                           
+                               
+                            </div>
+                        </form>
+                    </div>
+                </div>
         </div>
     </div>
 </section>
