--- a/relinksys/web/src/app/admin/add-type/add-type.component.html
+++ b/relinksys/web/src/app/admin/add-type/add-type.component.html
@@ -51,7 +51,6 @@
                                         aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>add</mat-icon>
                                     </button>
-
                                     <button class="ms-2" [disabled]="data1.Category === null" mat-mini-fab color="warn"
                                         *ngIf="showAdd === false" (click)="delSupport()"
                                         aria-label="Example icon button with a bookmark icon">
@@ -76,7 +75,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="card">
                     <div class="header">
                         <h2>Manual Cron</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
@@ -84,16 +84,15 @@
                     <div class="body">
                         <form #f="ngForm" autocomplete="off">
                             <div class="row">
-                                 <div class="col-xl-12 col-lg-12 col-md-12 col-4 mb-0">
-                             <button class="ms-3 " type="button" mat-raised-button color="primary"   (click)="ManualCron()"  >Manual Cron</button>
-                                    
-                                 </div>
-                           
-                               
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-4 mb-0">
+                                    <button class="mt-3 " type="button" mat-raised-button color="primary"
+                                        (click)="ManualCron()">Manual Cron</button>
+                                </div>
                             </div>
                         </form>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
 </section>
