--- a/relinksys/web/src/app/sale/bill-list/bill-list.component.html
+++ b/relinksys/web/src/app/sale/bill-list/bill-list.component.html
@@ -553,7 +553,7 @@
                     <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Payment
                       <button *ngIf="company.InsuranceModule == 'true'"
                        type="button" (click)="opneModelI(content2i)" mat-raised-button color="primary">
-                        insurance
+                        Insurance
                       </button>
                     </h3>
                   </div>
