--- a/relinksys/web/src/app/ecommerce/product/product.component.css
+++ b/relinksys/web/src/app/ecommerce/product/product.component.css
@@ -72,3 +72,9 @@
 .first-letter {
     color: #fff201; /* Color for the first letter on hover */
   }
+
+  .deleteClass {
+  color: red !important;
+  text-decoration: line-through;
+}
+
