--- a/relinksys/web/src/app/common/common.component.html
+++ b/relinksys/web/src/app/common/common.component.html
@@ -199,8 +199,8 @@
               <a *ngIf="viewFlag.viewGSTFilingReport" href="javascript:void(0)" [routerLink]="['/report/GST-filling']" id="collapseExample7">GST Filling</a> 
               <a *ngIf="viewFlag.viewPettyCashCashCounterReport && companyData.PettyCash == 'true'" href="javascript:void(0)" [routerLink]="['/report/petty-cash']" id="collapseExample7">Petty-Cash</a> 
               <a *ngIf="viewFlag.viewCustomerRewardReport" href="javascript:void(0)" [routerLink]="['/report/reward']" id="collapseExample7">Reward</a> 
-              <a *ngIf="viewFlag.viewCustomerRewardReport" href="javascript:void(0)" [routerLink]="['/report/customer-return']" id="collapseExample7">Customer Return</a> 
-              <a  href="javascript:void(0)" [routerLink]="['/report/insurance']" id="collapseExample7">Insurance</a> 
+              <a *ngIf="viewFlag.viewCustomerRewardReport " href="javascript:void(0)" [routerLink]="['/report/customer-return']" id="collapseExample7">Customer Return</a> 
+              <a *ngIf="companyData.InsuranceModule == 'true'"  href="javascript:void(0)" [routerLink]="['/report/insurance']" id="collapseExample7">Insurance</a> 
 
             </div>
           </div>
