--- a/relinksys/web/src/app/inventory/physical-stock/physical-stock.component.html
+++ b/relinksys/web/src/app/inventory/physical-stock/physical-stock.component.html
@@ -28,8 +28,8 @@
                                 <div class="col-xl-1 col-lg-4 col-md-6 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
-                                        <input matInput name="Barcode" (blur)="barcodeScan()" [(ngModel)]="Barcode"
-                                            #Barcodecontrol>
+                                        <input matInput name="Barcode"  #barcodeInput (blur)="barcodeScan()"  (keyup.enter)="barcodeScan()" [(ngModel)]="Barcode"
+                                            #Barcodecontrol >
                                         <mat-error>
                                             Barcode required
                                         </mat-error>
